<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/teal_blue"
    android:padding="24dp"
    tools:context=".view.WelcomeActivity">

    <!-- Welcome Title -->
    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="36sp"
        android:layout_marginTop="50dp"
        android:gravity="center" />

    <!-- Short Intro text -->
    <TextView
        android:id="@+id/introText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="40dp"
        android:lineSpacingExtra="4dp" />

    <!-- Center Image -->
    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:src="@drawable/shopping"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:layout_marginBottom="40dp" />

    <!-- Get Started Button -->
    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/start_button"
        android:text="@string/get_start"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:elevation="5dp"
        android:layout_marginTop="35dp" />

</LinearLayout>
