<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="16dp"
    tools:context=".HistoryActivity">

    <!-- Back button and title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/back_button"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <!-- Search bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_search"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/search"
            android:layout_marginEnd="8dp"
            app:tint="#888" />

        <EditText
            android:id="@+id/searchHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/history_search"
            android:textColor="#000"
            android:textColorHint="#888"
            android:textSize="18sp"
            android:background="@null"/>

    </LinearLayout>


    <!-- History List -->
    <ListView
        android:id="@+id/historyListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:dividerHeight="8dp" />
</LinearLayout>
